2.k8s_manifests/1.allow-app1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app1
spec:
  podSelector:
    matchLabels:
      app: "1"
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: "2"
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: "2"
    - to:
        - namespaceSelector: {}  # This means to any namespace
          podSelector:
            matchLabels:
              k8s-app: "kube-dns"
      ports:
        - port: 53
          protocol: UDP
